--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
       scale="1 1 1"
     ></a-entity>
 
+    <a-entity
+      gltf-model="assets/DDD000glb.glb"
+      position="30 0 10"
+      rotation="90 0 0"
+      scale="1 1 1"
+    ></a-entity>
+
     <a-entity environment="preset: default"></a-entity>
     <a-entity light="type:ambient; intensity:2.0"></a-entity>
 
