--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </a-entity>
 
     <a-entity
-      gltf-model="assets/DDD000glb.glb"
+      gltf-model="assets/large_DDD_model2(1).glb"
       position="10 0 10"
       rotation="90 0 0"
       scale="12 12 12"
     ></a-entity>
 
     <a-entity
-      gltf-model="assets/DDD000glb.glb"
+      gltf-model="assets/large_DDD_model2(1).glb"
       position="30 0 10"
       rotation="90 0 0"
       scale="1 1 1"
@@ -68,4 +68,5 @@
 
 </body>
 </html>
+
 
